[package]
name = "reflected-grpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.11.0", features = [
    "tls",
    "tls-roots",
    "transport",
    "channel",
] }
protobuf = { version = "3.5.0" }
thiserror = "1.0.61"
tonic-reflection = { version = "0.11.0" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
